--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=gkgkghgh12
 
 spring.jpa.show-sql=true
+
+spring.data.redis.host=127.0.0.1
+spring.data.redis.port=6379
